--- a/GpioUtils/GpioUtils.csproj
+++ b/GpioUtils/GpioUtils.csproj
@@ -44,6 +44,9 @@
     <Compile Include="GpioDeviceState.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>"$(SolutionDir).nuget\nuget.exe" pack "$(ProjectDir)$(ProjectFileName)" -IncludeReferencedProjects -Prop Configuration=Release</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
